--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "ser": "php artisan serve"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
+        "tailwindcss": "^3.4.3",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.21",
+        "postcss": "^8.5.6",
+        "sweetalert2": "^11.23.0"
     }
 }
